--- a/stack/CMakeLists.txt
+++ b/stack/CMakeLists.txt
@@ -5,4 +5,6 @@ set(CMAKE_C_STANDARD 11)
 
 
 add_executable(496 496.c)
-
+add_executable(1047 1047.c)
+add_executable(682 682.c)
+add_executable(844 844.c)
