--- a/stack/CMakeLists.txt
+++ b/stack/CMakeLists.txt
@@ -8,3 +8,4 @@ add_executable(496 496.c)
 add_executable(1047 1047.c)
 add_executable(682 682.c)
 add_executable(844 844.c)
+add_executable(20 20.c)
