--- a/tree/CMakeLists.txt
+++ b/tree/CMakeLists.txt
@@ -14,3 +14,4 @@ add_executable(501 501.c)
 add_executable(107 107.c)
 add_executable(110 110.c)
 add_executable(111 111.c)
+add_executable(653 653.c)
