补完这个星期的吧

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(leetcode_c C)
 set(CMAKE_C_STANDARD 11)
 
 
-
+add_subdirectory(others)
 add_subdirectory(list)
 add_subdirectory(tree)
 add_subdirectory(stack)
