--- a/tree/CMakeLists.txt
+++ b/tree/CMakeLists.txt
@@ -15,3 +15,7 @@ add_executable(107 107.c)
 add_executable(110 110.c)
 add_executable(111 111.c)
 add_executable(653 653.c)
+add_executable(543 543.c)
+add_executable(112 112.c)
+add_executable(404 404.c)
+add_executable(226 226.c)
