--- a/tree/CMakeLists.txt
+++ b/tree/CMakeLists.txt
@@ -19,3 +19,4 @@ add_executable(543 543.c)
 add_executable(112 112.c)
 add_executable(404 404.c)
 add_executable(226 226.c)
+add_executable(993 993.c)
