235 todo: 以后要补上输入生成二叉树

--- a/tree/CMakeLists.txt
+++ b/tree/CMakeLists.txt
@@ -20,3 +20,4 @@ add_executable(112 112.c)
 add_executable(404 404.c)
 add_executable(226 226.c)
 add_executable(993 993.c)
+add_executable(235 235.c)
