--- a/tree/CMakeLists.txt
+++ b/tree/CMakeLists.txt
@@ -24,5 +24,8 @@ add_executable(993 993.c)
 add_executable(235 235.c)
 add_executable(257 257.c)
 add_executable(687 687.c)
+add_executable(897 897.c)
 
 target_link_libraries(257 kazusa)
+target_link_libraries(687 kazusa)
+target_link_libraries(897 kazusa)
